Fix: Satellite mouseover text now fully visible
Make sure that the full MAC address is visible when mouseover a station in the map

--- a/dashboard/src/Satellite/Satellite.css
+++ b/dashboard/src/Satellite/Satellite.css
@@ -4,7 +4,8 @@
 }
 .satellite-icon:hover text {
     font-weight: bold;
-    stroke: white;
+    /* stroke: white; */
     fill: black;
     opacity: 1;
+    font-size: 12px;
 }
